--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
