--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "styled-components": "^6.3.9",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
